--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="nav-item ">
-                        <a onclick="logout()" class="nav-link btn  " href="index.html">Logout</a>
+                        <a onclick="logout()" class="nav-link btn  " href="login.html">Logout</a>
                     </li>
 
 
